src/objects/fc_csc__Collections_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Collections configuration</description>
    <fields>
        <fullName>fc_csc__CollectionUpdateRangeinmonths__c</fullName>
        <defaultValue>12</defaultValue>
        <description>The number of months that collections updates should be made for accounts.</description>
        <label>Collection Update Range (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fc_csc__Default_Queue__c</fullName>
        <description>Default queue - will be a User Id</description>
        <label>Default Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Is_Show_Reports_on_Dashboard__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Reports on Dashboard?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fc_csc__Report_1_Developer_Name__c</fullName>
        <label>Report 1 Developer Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fc_csc__Report_2_Developer_Name__c</fullName>
        <label>Report 2 Developer Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Collections Config</label>
</CustomObject>